# fp-haskell-spbu

./: README.md  detect_latest.sh
.github/workflows/: build.yml
FSharpUoM/: FSharpUoM.cabal  README.md  Template.cabal
FSharpUoM/app/: Main.hs
FSharpUoM/lib/: Ast.hs  Lexer.hs  MyLib.hs  Parser.hs
FSharpUoM/lib/Interpreter/: Interpreter.hs  PrettyPrint.hs  Runtime.hs
FSharpUoM/lib/Parser/: Ast.hs  Lexer.hs  Parser.hs
FSharpUoM/lib/TypeInference/: HindleyMilner.hs  PrettyPrint.hs  Runtime.hs  TIRealization.hs
FSharpUoM/test/: MyLibTest.hs
FSharpUoM/test-integration/: test.sh
FSharpUoM/test-integration/tests/: bool.fs  bool.out  expressions.fs  expressions.out  fix.fs  fix.out  operations.fs  operations.out  recursion.fs  recursion.out  redeclarations.fs  redeclarations.out  statements.fs  statements.out  typeInferenceErrors.fs  typeInferenceErrors.out  unitsOfMeasure.fs  unitsOfMeasure.out
Go/: README.md  mini-go.cabal  mini-go.pest
Go/app/: Main.hs
Go/lib/: Ast.hs  Errors.hs  Interpreter.hs  Lexer.hs  Parser.hs  PrimitiveValue.hs  ProgramChecker.hs  StdLib.hs
Go/lib/Analyzer/: AnalysisResult.hs  AnalyzedAst.hs  AnalyzedType.hs  Analyzer.hs  AnalyzerRuntime.hs  ConstExpressionConverters.hs  Result.hs  Runtime.hs
Go/lib/Interpreter/: InterpretationResult.hs  Interpreter.hs  InterpreterRuntime.hs  Result.hs  Runtime.hs  RuntimeValue.hs
Go/lib/Parser/: Ast.hs  Lexer.hs  Parser.hs
Go/test-integration/: test.sh
Go/test-integration/tests/: array.go  array.out  bool.go  closures.go  const-expressions.go  func.go  func.out  global-closures.go  globals.go  globals.out  id-not-found.go  id-not-found.out  id-redecl.go  id-redecl.out  int.go  int.out  mem-with-open-rec.go  recursion.go  recursion.out  return.go  statements.go  statements.out  stdlib.go  stdlib.out  string.go  string.out  test-1.go  test-1.out
MiniGo/: README.md  mini-go.cabal  mini-go.pest
MiniGo/app/: Main.hs
MiniGo/lib/: Ast.hs  AstOptimizer.hs  ConstExprSimplification.hs  Interpreter.hs  Lexer.hs  Parser.hs  ParserCombinators.hs  ProgramChecker.hs  Result.hs  StdLib.hs
Refal/: .gitignore  CHANGELOG.md  README.md  Refal.cabal
Refal/app/: Main.hs
Refal/lib/Interpreter/: Interpreter.hs  Stdlib.hs  Transformer.hs
Refal/lib/Parser/: AST.hs  Lexer.hs  Parser.hs
Refal/lib/PrettyPrinter/: Prettier.hs
Refal/test/: MyLibTest.hs  input.txt  power.ref  test.sh
Refal/test-integration/: chpm.ref  correct.ref  equal.ref  expected  factorial-loop.ref  factorial.ref  fibonnachi.ref  palindrome.ref  power.ref  test.sh  translate.ref
Refal/test-prettier/: expected.ref  test.sh  toPrettify.ref
Refal/tests/: test.hs
Template/: CHANGELOG.md  README.md  Template.cabal
