cabal-version:      3.0
name:               FSharpUoM
version:            0.1.0.0
synopsis:           F# + <Units of Measure> parser + interpreter

-- A longer description of the package.
-- description:
homepage:           https://github.com/Alexander-Zadorozhnyy/fp2022-haskell-FSharp-Mini-ML/tree/master/FSharpUoM

-- A URL where users can report bugs.
bug-reports:        https://github.com/Alexander-Zadorozhnyy/fp2022-haskell-FSharp-Mini-ML/issues
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             Zadorozhnyy Alexander
maintainer:         sasha.zadorojnii2013@yandex.ru

-- A copyright notice.
copyright:          Copyright © 2022 Zadorozhnyy Alexander

category:           Language
extra-source-files: README.md

library
    exposed-modules:
        Ast,
        Parser,
        Lexer

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.14.3.0,
        text >=2.0.1,
        megaparsec >=9.2.1,
        parser-combinators >=1.3.0,
        scientific >=0.3.7.0
        
    hs-source-dirs:   lib
    default-language: Haskell2010

executable FSharpUoMExec
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.16.3.0,
        text >=2.0.1,
        FSharpUoM

    hs-source-dirs:   app
    default-language: Haskell2010

-- test-suite Template-test
--     default-language: Haskell2010
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          MyLibTest.hs
--     build-depends:    base >=4.16.3.0
