cabal-version:      3.0
name:               FSharpUoM
version:            0.1.0.0
synopsis:           F# + <Units of Measure> parser + interpreter

-- A longer description of the package.
-- description:
homepage:           https://github.com/Alexander-Zadorozhnyy/fp2022-haskell-FSharp-Mini-ML/tree/master/FSharpUoM

-- A URL where users can report bugs.
bug-reports:        https://github.com/Alexander-Zadorozhnyy/fp2022-haskell-FSharp-Mini-ML/issues
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             Zadorozhnyy Alexander
maintainer:         sasha.zadorojnii2013@yandex.ru

-- A copyright notice.
copyright:          Copyright © 2022 Zadorozhnyy Alexander

category:           Language
extra-source-files: README.md


common shared-properties
    default-language: Haskell2010

    build-depends:
        base >=4.16.3.0,
        text >=2.0.1

    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-uni-patterns
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints

library
    import: shared-properties

    exposed-modules:
        Parser.Ast,
        Parser.Parser,
        Parser.Lexer,
        TypeInference.HindleyMilner,
        TypeInference.PrettyPrint,
        TypeInference.Runtime,
        TypeInference.TIRealization,
        Interpreter.Interpreter,
        Interpreter.Runtime,
        Interpreter.PrettyPrint

    build-depends:
        megaparsec >=9.2.1,
        parser-combinators >=1.3.0,
        unification-fd >= 0.5.0,
        containers >= 0.6.5.1,
        mtl >= 2.2.2,
        repline,
        ieee >= 0.7,
        extra >= 1.7.12

    hs-source-dirs: lib

executable FSharpUoMExec
    import: shared-properties

    main-is: Main.hs

    build-depends:
        FSharpUoM,
        megaparsec >=9.2.1,
        parser-combinators >=1.3.0,
        unification-fd >= 0.5.0,
        containers >= 0.6.5.1,
        mtl >= 2.2.2,
        repline,
        optparse-applicative >= 0.16.1.0

    hs-source-dirs: app