cabal-version: 3.0

name: mini-go

version: 0.1.0.0

synopsis: Mini Go parser and interpreter

description:
    Mini Go parser and interpreter

homepage: https://github.com/AzimMuradov/fp2022-haskell/tree/master/Go

bug-reports: https://github.com/AzimMuradov/fp2022-haskell/issues

license: Apache-2.0

license-file: LICENSE

author: Azim Muradov

maintainer: azim.muradov.dev@gmail.com

copyright: Copyright © 2022 Azim Muradov

category: Language

extra-source-files: README.md

common shared-properties
    default-language: Haskell2010

    build-depends:
        base >=4.16.3.0,
        text >=2.0.1

    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-uni-patterns
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints

library
    import: shared-properties

    exposed-modules:
        Ast,
        Lexer,
        Parser,
        AstOptimizer,
        ProgramChecker,
        Interpreter,
        StdLib,
        Errors

    other-modules:

    other-extensions:

    build-depends:
        extra >=1.7.12,
        either >=5.0.2,
        containers >=0.6.6,
        parser-combinators >=1.3.0,
        megaparsec >=9.2.2

    hs-source-dirs: lib

executable minigo
    import: shared-properties

    main-is: Main.hs

    other-modules:

    other-extensions:

    build-depends:
        mini-go

    hs-source-dirs: app
