cabal-version: 3.8

name: mini-go

version: 0.1.0.0

synopsis: Mini Go parser and interpreter

description:
    Mini Go parser and interpreter

homepage: https://github.com/AzimMuradov/fp2022-haskell/tree/master/Go

bug-reports: https://github.com/AzimMuradov/fp2022-haskell/issues

license: Apache-2.0

license-file: LICENSE

author: Azim Muradov

maintainer: azim.muradov.dev@gmail.com

copyright: Copyright © 2022 Azim Muradov

category: Language

extra-source-files: README.md

common shared-properties
    default-language: Haskell2010

    build-depends:
        base >=4.16.3.0,
        extra >=1.7.12,
        text >=2.0.1

    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-uni-patterns
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints

library
    import: shared-properties

    exposed-modules:
        Parser.Ast,
        Parser.Lexer,
        Parser.Parser,
        Analyzer.AnalyzedAst,
        Analyzer.AnalyzedType,
        Analyzer.Result,
        Analyzer.ConstExpressionConverters,
        Analyzer.Runtime,
        Analyzer.Analyzer,
        Interpreter.Result,
        Interpreter.Runtime,
        Interpreter.Interpreter,
        StdLib,
        PrimitiveValue

    other-modules:

    other-extensions:

    build-depends:
        lens >=5.2,
        mtl >=2.3.1,
        either >=5.0.2,
        containers >=0.6.6,
        parser-combinators >=1.3.0,
        megaparsec >=9.2.2

    hs-source-dirs: lib

executable minigo
    import: shared-properties

    main-is: Main.hs

    other-modules:

    other-extensions:

    build-depends:
        mini-go,
        parser-combinators >=1.3.0,
        megaparsec >=9.2.2,
        optparse-applicative >=0.17.0

    hs-source-dirs: app
