cabal-version: 3.0

name: mini-go

version: 0.1.0.0

synopsis: Mini Go parser and interpreter

description:
    Mini Go parser and interpreter

homepage: https://github.com/AzimMuradov/fp2022-haskell/tree/master/MiniGO

bug-reports: https://github.com/AzimMuradov/fp2022-haskell/issues

license: Apache-2.0

license-file: LICENSE

author: Azim Muradov

maintainer: azim.muradov.dev@gmail.com

copyright: Copyright © 2022 Azim Muradov

category: Language

extra-source-files: README.md


library
    exposed-modules:
        Ast,
        Lexer,
        Parser,
        AstOptimizer,
        ProgramChecker,
        Interpreter,
        Result

    other-modules:

    default-language: Haskell2010

    other-extensions:

    build-depends:
        base >=4.16.3.0,
        either >=5.0.2,
        text >=2.0.1,
        parser-combinators >=1.3.0,
        megaparsec >=9.2.2,
        containers >=0.6.6

    hs-source-dirs: lib

executable minigo
    main-is: Main.hs

    other-modules:

    default-language: Haskell2010

    other-extensions:

    build-depends:
        base >=4.16.3.0,
        text >=2.0.1,
        mini-go

    hs-source-dirs: app
